@@ -75,7 +75,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>6004</string>
+	<string>6032</string>
 	<key>Fabric</key>
 	<dict>
 		<key>APIKey</key>
